# slay_the_spire1.5

./: .gitignore  CMakeLists.txt  README.md  prd.md
.cache/clangd/index/: AttackCard.cpp.0D47478B814FBCE9.idx  AttackCard.h.D1A0158214190A06.idx  BattleManager.cpp.5B230A83E6D9C077.idx  BattleManager.h.98EFA79671713CCD.idx  BattleScene.cpp.2F17C3DA2E5F84F5.idx  BattleScene.h.15F699D7297AE08D.idx  BeadsRelic.cpp.660E0309BE82F9B0.idx  BeadsRelic.h.AA68532D5527C79D.idx  Buff.cpp.B28743FACAF18289.idx  Buff.h.031D391A69135D66.idx  BuffManager.cpp.2D0585DEE0DEEB1D.idx  BuffManager.h.F934313EB0C0CEA8.idx  Card.cpp.258778224740073A.idx  Card.h.4B1E50401A3CA5E6.idx  CardDatabase.cpp.81F876D8F97B2FDC.idx  CardDatabase.h.8D1FDF7FF249B77A.idx  CardEffect.cpp.0598E0E37A3185F1.idx  CardEffect.h.53E2AD2497AE4B37.idx  CardWidget.cpp.D5EA7F2E0C59EA3F.idx  CardWidget.h.C6D9E3808EFEED67.idx  Character.cpp.4692B5A7A53F723A.idx  Character.h.20BD697A41134956.idx  CharacterSelectScene.cpp.9F86444830FFA8F3.idx  CharacterSelectScene.h.1DA8B6EF8DCC62BD.idx  CornRelic.cpp.8DED365F49975400.idx  CornRelic.h.50046D68AE4C96BF.idx  CrownRelic.cpp.81F051B84DB994CE.idx  CrownRelic.h.9900CE49AE50E5FB.idx  DamageCalculator.cpp.BD262A70FC12C652.idx  DamageCalculator.h.3B347457A431032A.idx  (+66 more)
resources/: resources.qrc
src/: main.cpp
src/core/: GameManager.cpp  GameManager.h
src/core/buff/: Buff.h  (+13 more)
src/data/: CardDatabase.cpp  CardDatabase.h  EnemyDatabase.cpp  EnemyDatabase.h  GameConfig.h  PotionDatabase.cpp  PotionDatabase.h  RelicDatabase.cpp  RelicDatabase.h
src/ui/: SceneManager.cpp  SceneManager.h
(+68 files in other folders)
